<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/SpndRootSrlViw"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/SpndRootScrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/showD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/sendsms"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/DarkOliveGreen" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:alpha=".50"
                android:background="@color/Black" />

            <TextView
                android:id="@+id/Spndtv10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/amt10"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/DarkGoldenrod" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:alpha=".50"
                android:background="@color/SkyBlue" />

            <TextView
                android:id="@+id/Spndtv50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/amt50"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/DarkGoldenrod" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:alpha=".50"
                android:background="@color/SkyBlue" />

            <TextView
                android:id="@+id/Spndtv100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/amt100"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/DarkGoldenrod" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:alpha=".50"
                android:background="@color/Black" />

            <TextView
                android:id="@+id/hstrView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/numPickTxt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/SpndInnrLinr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" >

                <NumberPicker
                    android:id="@+id/numberPicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:soundEffectsEnabled="true" />

                <NumberPicker
                    android:id="@+id/numberPicker2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:soundEffectsEnabled="true" />

                <NumberPicker
                    android:id="@+id/numberPicker3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:soundEffectsEnabled="true" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:alpha=".50"
                android:background="@color/Black" />

            <TextView
                android:id="@+id/SpndAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/amt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:alpha=".50"
                android:background="@color/Black" />

            <LinearLayout
                android:id="@+id/llh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/mobilno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/mobinum"
                    android:inputType="number"
                    android:maxLength="100" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/brws"
                    style="?android:attr/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/playbtsn_prss1"
                    android:text="@string/brws" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:alpha=".50"
                android:background="@color/Black" />

            <Button
                android:id="@+id/WtDraSub"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_pressed"
                android:text="@string/SpndBtn" />
        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:choiceMode="singleChoice"
        android:divider="@android:color/holo_green_light"
        android:dividerHeight="2dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:soundEffectsEnabled="true" />

</android.support.v4.widget.DrawerLayout>
