<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/SpndRootSrlViw"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/SpndRootScrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ursdet"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/Black" />

     <TextView
         android:id="@+id/AbtUs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="20dp"
         android:text="@string/uname"
         android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/SkyBlue" />
     
      <TextView
          android:id="@+id/PrAcc"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="20dp"
          android:text="@string/PrAccNo"
          android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/SkyBlue" />

      <TextView
          android:id="@+id/PrEm"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="20dp"
          android:text="@string/PrEM"
          android:textAppearance="?android:attr/textAppearanceMedium" />
      
      <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/Black" />

     </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:choiceMode="singleChoice"
        android:divider="@android:color/holo_green_light"
        android:dividerHeight="2dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:soundEffectsEnabled="true" />

</android.support.v4.widget.DrawerLayout>

