<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
  
        
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/myBlns"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/B1"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/Black" />
     
      <TextView
          android:id="@+id/amt10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:layout_gravity="center_horizontal"
          android:text="@string/amt10"
          android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/SkyBlue" />
     
      <TextView
          android:id="@+id/amt50"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:layout_gravity="center_horizontal"
          android:text="@string/amt50"
          android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/SkyBlue" />
     
      <TextView
          android:id="@+id/amt100"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:layout_gravity="center_horizontal"
          android:text="@string/amt100"
          android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/SkyBlue" />
     
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/Black" />
     <TextView
             android:id="@+id/ttAmt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="20dp"
             android:text="@string/amt"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/Black" />

</LinearLayout>
        

  

    <ListView android:id="@+id/left_drawer"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/holo_green_light"
        android:dividerHeight="2dp"
        android:soundEffectsEnabled="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="#fff"/>
    
    
</android.support.v4.widget.DrawerLayout>
