<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView 
    android:id="@+id/WithScrl"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        
     <TextView
        android:id="@+id/WttAbtUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/DSlctAmt"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:alpha=".50"
            android:background="@color/Black" />
        
      <TextView
            android:id="@+id/hstrView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/numPickTxt"
            android:textAppearance="?android:attr/textAppearanceMedium" />
     
     
      <LinearLayout
            android:id="@+id/DSpndInnrLinr"
            android:layout_width="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_height="wrap_content" >

            <NumberPicker
                android:id="@+id/DnumberPicker1"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:soundEffectsEnabled="true"
                android:layout_height="wrap_content" />

            <NumberPicker
                android:id="@+id/DnumberPicker2"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:soundEffectsEnabled="true"
                android:layout_height="wrap_content" />

            <NumberPicker
                android:id="@+id/DnumberPicker3"
                android:layout_marginLeft="30dp"
                android:soundEffectsEnabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        
    
       <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:alpha=".50"
            android:background="@color/Black" />
        
        <TextView
             android:id="@+id/SpndAmt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
             android:text="@string/amt"
             android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:alpha=".50"
            android:background="@color/Black" />

        <Button
            android:id="@+id/WtDraSub"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_pressed"
            android:text="@string/mkpay" />
    </LinearLayout>

</ScrollView>

 <ListView android:id="@+id/left_drawer"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/holo_green_light"
        android:dividerHeight="2dp"
        android:soundEffectsEnabled="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="#fff"/>

</android.support.v4.widget.DrawerLayout>

